# fdf_42

./: CMakeLists.txt  Makefile  calculations_in_matrix.c  draw_3d_projection.c  draw_line.c  draw_map.c  draw_net.c  draw_window.c  elem-col.fdf  errors_all.c  fdf  fdf.h  free_for_all.c  hook.c  main.c  one_more_file.c  read_map.c
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_foreach.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_list_reverse.c  ft_list_size.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_split_whitespaces.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+26 more)
libft/includes/: libft.h
v.0.0.1/: Makefile  draw_line.c  draw_net.c  fdf.h  get_next_line.c  main.c  read_map.c
